# sophon-inference

./: .gitignore  .gitlab-ci.yml  .pylintrc  CMakeLists.txt  CODEOWNERS  LICENSE  README.md  RELEASE.md  build_unix.cmake  build_windows.cmake  compile.sh  toolchain-x86_64-linux.cmake
cmake/: ToolChain_loongarch64_linux.cmake  ToolChain_mips64_linux.cmake  ToolChain_sw64_linux.cmake
cmake/BM1684_ARM_PCIE/: FindBMDecode.cmake  FindBMSDK.cmake  FindFFMPEG.cmake  ToolChain_aarch64_linux.cmake
cmake/BM1684_CMODEL/: FindBMSDK.cmake
cmake/BM1684_PCIE/: FindBMDecode.cmake  FindBMSDK.cmake  FindFFMPEG.cmake
cmake/BM1684_SOC/: FindBMDecode.cmake  FindBMSDK.cmake  FindFFMPEG.cmake  FindOpenCV.cmake
cmake/BMNNSDK2_BM1684_ARM_PCIE/: FindBMDecode.cmake  FindBMSDK.cmake  FindFFMPEG.cmake
cmake/BMNNSDK2_BM1684_PCIE/: FindBMSDK.cmake  FindFFMPEG.cmake
docker/: Dockerfile  build_sail_docker.sh
docs/: CODING_STYLE_GUIDE.md  FAQ.md  Makefile  README.md
docs/source_en/: 0_get_start.rst  1_demo.rst  2_module.rst  conf.py  index.rst
docs/source_zh/: 0_get_start.rst  1_demo.rst  2_module.rst  conf.py  index.rst
include/: base64.h  catch.hpp  cvwrapper.h  engine.h  engine_multi.h  graph.h  inireader.hpp  message_queue.hpp  spdlog  tabulate.hpp  tensor.h  tools.h
include/spdlog/: async.h
modules/auto_runner/: check_tensorflow.py
modules/utils/: download_and_convert.py  (+2 more)
python/: setup_dev_python_path.sh
release/: README.md  install_sail.sh
release/qa_test/sc5_tests/: CMakeLists.txt  README.md  auto_test.sh
release/qa_test/sc5_tests/cmake/: FindBMNNSDK2.cmake
release/qa_test/sc5_tests/cmake/arm/: FindBMNNSDK2.cmake  FindOpenCV.cmake
release/qa_test/sc5_tests/cmake/x86/: FindBMNNSDK2.cmake  FindOpenCV.cmake
release/qa_test/sc5_tests/cpp/cls_resnet/: CMakeLists.txt
release/qa_test/sc5_tests/cpp/cls_resnet/verify_files/: verify_resnet50.ini
release/qa_test/sc5_tests/cpp/det_mtcnn/: CMakeLists.txt
release/qa_test/sc5_tests/cpp/det_mtcnn/verify_files/: verify_mtcnn.ini
release/qa_test/sc5_tests/cpp/det_ssd/: CMakeLists.txt
release/qa_test/sc5_tests/cpp/det_ssd/verify_files/: verify_ssd_0_fp32_image.ini  verify_ssd_0_fp32_video.ini  verify_ssd_0_fp32_video_arm.ini  verify_ssd_0_int8_image.ini  verify_ssd_0_int8_video.ini  verify_ssd_0_int8_video_arm.ini  verify_ssd_1_fp32_image.ini  verify_ssd_1_fp32_video.ini  verify_ssd_1_int8_image.ini  verify_ssd_1_int8_video.ini  verify_ssd_2_fp32_video.ini  verify_ssd_2_int8_video.ini
release/qa_test/sc5_tests/cpp/det_yolov3/: CMakeLists.txt
release/qa_test/sc5_tests/cpp/det_yolov3/verify_files/: verify_yolov3_fp32_0.ini  verify_yolov3_fp32_0_arm.ini  verify_yolov3_fp32_1.ini  verify_yolov3_int8_0.ini  verify_yolov3_int8_0_arm.ini  verify_yolov3_int8_1.ini
release/qa_test/sc5_tests/python/cls_resnet/verify_files/: verify_resnet50.json
release/qa_test/sc5_tests/python/det_mtcnn/: verify_mtcnn.json
release/qa_test/sc5_tests/python/det_mtcnn/verify_files/: verify_mtcnn.json
release/qa_test/sc5_tests/python/det_ssd/verify_files/: verify_ssd_0_fp32_image.json  verify_ssd_0_fp32_video.json  verify_ssd_0_fp32_video_arm.json  verify_ssd_0_int8_image.json  verify_ssd_0_int8_video.json  verify_ssd_0_int8_video_arm.json  verify_ssd_1_fp32_image.json  verify_ssd_1_fp32_video.json  verify_ssd_1_int8_image.json  verify_ssd_1_int8_video.json  verify_ssd_2_fp32_video.json  verify_ssd_2_int8_video.json
release/qa_test/sc5_tests/python/det_yolov3/verify_files/: verify_yolov3_fp32.json  verify_yolov3_fp32_arm.json  verify_yolov3_int8.json  verify_yolov3_int8_arm.json
samples/: CMakeLists.txt
samples/cpp/: README.md
samples/cpp/cls_resnet/: CMakeLists.txt  README.md  cls_resnet_0.cpp  cls_resnet_1.cpp  cls_resnet_2.cpp  cls_resnet_3.cpp  processor.cpp  processor.h
samples/cpp/det_mtcnn/: CMakeLists.txt  README.md  det_mtcnn.cpp  getopt_win.c  processor.cpp  processor.h
samples/cpp/det_ssd/: CMakeLists.txt  README.md  cvdecoder.cpp  cvdecoder.h  det_ssd_0.cpp  det_ssd_1.cpp  det_ssd_2.cpp  det_ssd_3.cpp  det_ssd_4.cpp  processor.cpp  processor.h
samples/cpp/det_yolov3/: CMakeLists.txt  README.md  det_yolov3_0.cpp  det_yolov3_1.cpp  frame_provider.cpp  frame_provider.h  processor.cpp  processor.h
samples/python/: README.md
samples/python/cls_resnet/: README.md  cls_resnet_0.py  cls_resnet_1.py  cls_resnet_2.py  cls_resnet_3.py  processor.py
samples/python/det_mtcnn/: README.md  det_mtcnn.py  processor.py
samples/python/det_ssd/: README.md  det_ssd_0.py  det_ssd_1.py  det_ssd_2.py
samples/python/det_yolov3/: README.md  det_yolov3.py
samples/python/multiprocess_detection/: README  pack.py  requirements.txt  server.py  upload.py
samples/python/multiprocess_detection/capture/: Capture (copy).py  Capture.py
samples/python/multiprocess_detection/detection/: Makefile  RetinaDetector.py  __init__.py
samples/python/multiprocess_detection/detection/rcnn/pycocotools/: _mask.c
samples/python/multiprocess_detection/predict/: Predict.py  __init__.py
samples/python/multiprocess_detection/utils/: __init__.py
samples/python/multiprocess_detection/websocket/: pull_frame.py
samples/python/multiprocess_detection_yolox/: README  pack.py  requirements.txt  server.py  upload.py
samples/python/multiprocess_detection_yolox/capture/: Capture.py  __init__.py
samples/python/multiprocess_detection_yolox/detection/: YoloX.py
samples/python/multiprocess_detection_yolox/models/: __init__.py
samples/python/multiprocess_detection_yolox/utils/: __init__.py
samples/python/multiprocess_detection_yolox/websocket/: redis_websocket_srv.py
samples/python/multiprocess_detection_yolox/websocket/utils/: redis_client.py
src/: CMakeLists.txt  base64.cpp  bind.cpp  cvwrapper.cpp  engine.cpp  engine_multi.cpp  graph.cpp  internal.h  pybind11  sail.pyi  tensor.cpp  tools.cpp
tools/: README.md  docker_build_all.sh  download.py  download_and_convert.py  envset_buildserver.sh  get_latest_release.sh  init_deps.sh  install.sh  quantization_model  release_bm1684.bat  release_bm1684.sh  run_docker_bm1684.sh  run_regression_bm1684.sh
(+228 files in other folders)
